fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     padding-top: 20px;
     width: 1160px;
     font-family: Ubuntu, sans-serif;
-    overflow-x: hidden;
+    overflow-x: auto;
 }
 
 a {
